--- a/templates/room.html
+++ b/templates/room.html
@@ -2,6 +2,18 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<nav class="navbar navbar-light bg-light">
+  <nas class="ahmed">
+    <a class="navbar-brand" href="/">
+      <svg xmlns="http://www.w3.org/2000/svg" wi fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6" style="width: 50px;">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 01.865-.501 48.172 48.172 0 003.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
+      </svg>      
+      
+    </a>
+  </nas>
+</nav>
 <style>
 body {
   margin: 0 auto;
@@ -9,6 +21,9 @@ body {
   padding: 0 20px;
 }
 
+.ahmed{
+  border: 2px;
+}
 .container {
   border: 2px solid #dedede;
   background-color: #f1f1f1;
@@ -18,7 +33,7 @@ body {
 }
 
 .darker {
-  border-color: #ccc;
+  border-color: teal;
   background-color: #ddd;
 }
 
@@ -49,14 +64,14 @@ body {
 
 .time-left {
   float: left;
-  color: #999;
+  color: #54ca6e;
 }
 </style>
 <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 </head>
 <body>
 
-<h2>{{room}} - DjChat</h2>
+<h2 style="text-align: center;">{{room|capfirst}} - DjChat</h2>
 
 <div id="display">
 
@@ -67,18 +82,24 @@ body {
 
 </div>
 
-{% comment %} <script>
+<!-- لاظهار الرسائل فور ارسالها -->
+<script>
 $(document).ready(function(){
 
 setInterval(function(){
     $.ajax({
+        // جلب الرسائل
         type: 'GET',
-        url : "/getMessages/{{room}}/",
+        // الذهاب لرابط جلب الرسائل
+        url : "/getmessages/{{room}}/",
+        // لو الرسائل اتبعثت
         success: function(response){
             console.log(response);
             $("#display").empty();
+            // عمل متغير باسم كي يحتوي علي الماسج من الفيو
             for (var key in response.messages)
             {
+                                                                  // جلب التاريخ                                                 جلب الرسالة                          جلب اسم الراسل
                 var temp="<div class='container darker'><b>"+response.messages[key].user+"</b><p>"+response.messages[key].value+"</p><span class='time-left'>"+response.messages[key].date+"</span></div>";
                 $("#display").append(temp);
             }
@@ -89,7 +110,7 @@ setInterval(function(){
     });
 },1000);
 })
-</script> {% endcomment %}
+</script>
 
 
 <div class="container">
@@ -99,7 +120,7 @@ setInterval(function(){
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 2px solid #5bff69;
     border-radius: 4px;
     box-sizing: border-box;
     }
